--- a/comic.css
+++ b/comic.css
@@ -32,7 +32,7 @@ h3{
 }
 
 #image1{
-	background-image: url({{site.baseurl}}/image/image/1.jpg);
+	background-image: url(image/1.jpg);
 	background-size: contain;
 }
 
